--- a/Ten Tytans/en.lproj/MainStoryboard.storyboard
+++ b/Ten Tytans/en.lproj/MainStoryboard.storyboard
@@ -84,7 +84,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UNu-av-ydR" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="oeH-1B-0vI" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="536" y="-603"/>
+            <point key="canvasLocation" x="410" y="-647"/>
         </scene>
         <!--Game Interface-->
         <scene sceneID="5">
@@ -133,10 +133,10 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
-                            <containerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7Ks-vC-HTe" userLabel="Container View - Game Screen" customClass="TTGameObject">
+                            <containerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7Ks-vC-HTe" userLabel="Container View - Game Screen">
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                 <connections>
-                                    <segue destination="Nc4-cn-nIh" kind="embed" id="v8k-D0-Qnz"/>
+                                    <segue destination="Nc4-cn-nIh" kind="embed" identifier="EmbeddedSegueGameScreen" id="v8k-D0-Qnz"/>
                                 </connections>
                             </containerView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0j9-Y5-y5K" userLabel="Button - Attack" customClass="TTButtonExtraGuestures">
@@ -157,7 +157,6 @@
                         <constraints>
                             <constraint firstItem="7Ks-vC-HTe" firstAttribute="trailing" secondItem="3" secondAttribute="trailing" type="default" id="5ld-fj-Z61"/>
                             <constraint firstItem="fy1-1d-oQO" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="11" id="FnX-ub-0xS"/>
-                            <constraint firstItem="ko7-7s-Ov5" firstAttribute="top" secondItem="0j9-Y5-y5K" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="HhS-LF-fUC"/>
                             <constraint firstItem="7Ks-vC-HTe" firstAttribute="top" secondItem="3" secondAttribute="top" type="default" id="J4k-K0-024"/>
                             <constraint firstItem="0j9-Y5-y5K" firstAttribute="leading" secondItem="3" secondAttribute="leading" type="default" id="LNg-zx-AGu"/>
                             <constraint firstItem="0j9-Y5-y5K" firstAttribute="trailing" secondItem="3" secondAttribute="trailing" type="default" id="Ryo-c0-Ycs"/>
@@ -193,9 +192,9 @@
         <!--Picture Story Pan-->
         <scene sceneID="ifW-zi-cKe">
             <objects>
-                <viewController id="Ts0-m0-5xQ" userLabel="Picture Story Pan" customClass="TTPictureStoryPanViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SBPictureStoryPan" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Ts0-m0-5xQ" userLabel="Picture Story Pan" customClass="TTPictureStoryPanViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="cvQ-cu-bXw" userLabel="View - Picture Story Pan">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <rect key="frame" x="0.0" y="20" width="480" height="300"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="For movies / pictures " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LDk-Lc-e36">
@@ -203,18 +202,35 @@
                                 <color key="textColor" red="1" green="0.49644953749999998" blue="0.044102688869999997" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tOj-3O-jD5">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="back:" destination="Ts0-m0-5xQ" eventType="touchUpInside" id="jef-ZB-NmR"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
+                            <constraint firstItem="tOj-3O-jD5" firstAttribute="leading" secondItem="cvQ-cu-bXw" secondAttribute="leading" constant="102" id="CmZ-W0-6hm"/>
+                            <constraint firstItem="tOj-3O-jD5" firstAttribute="top" secondItem="cvQ-cu-bXw" secondAttribute="top" constant="144" id="LGb-o9-itm"/>
                             <constraint firstItem="LDk-Lc-e36" firstAttribute="leading" secondItem="cvQ-cu-bXw" secondAttribute="leading" constant="49" id="OQc-Fe-Fwf"/>
                             <constraint firstItem="LDk-Lc-e36" firstAttribute="top" secondItem="cvQ-cu-bXw" secondAttribute="top" constant="54" id="ZD5-BP-NuX"/>
                         </constraints>
+                        <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     </view>
+                    <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1H3-xk-j0y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1102" y="-647"/>
+            <point key="canvasLocation" x="990" y="-379"/>
         </scene>
         <!--Game Screen Graphics-->
         <scene sceneID="CKw-bF-V2m">
@@ -256,7 +272,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tba-eG-JDf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1110" y="-46"/>
+            <point key="canvasLocation" x="952" y="140"/>
         </scene>
     </scenes>
     <resources>
